--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@easepick/bundle": "^1.2.1"
     }
 }
